# binary_analysis

./: CMakeLists.txt  CMakePresets.json  conanfile.txt
apps/: CMakeLists.txt
apps/bdis/: CMakeLists.txt
apps/bdis/include/: CapstoneWrapper.h  Disasm.h  DisasmUtils.h  LinearDisasm.h  RecursiveDisasm.h
apps/bdis/src/: CapstoneWrapper.cpp  DisasmUtils.cpp  LinearDisasm.cpp  RecursiveDisasm.cpp  main.cpp
apps/binfo/src/: LoaderCLI.cpp  main.cpp
apps/binject/: CMakeLists.txt
apps/binject/include/: ElfFile.h  ElfInject.h
apps/binject/src/: ElfFile.cpp  ElfInject.cpp
apps/binject/tests/: test.sh
binfo/: CMakeLists.txt
binfo/include/: LoaderCLI.h
binfo/src/: Loader.cpp  LoaderCLI.cpp
binject/: CMakeLists.txt
binject/include/: ElfFile.h  InjectInfo.h
binject/src/: main.cpp
cmake/: common.cmake
cmake/Modules/: FindLibBfd.cmake  FindLibOpcodes.cmake  FindPin.cmake
loader/: CMakeLists.txt
loader/include/: BFDLoader.h  Binary.h  BinaryLoader.h  Section.h  Symbol.h
loader/src/: BFDLoader.cpp  Binary.cpp  Symbol.cpp
loader_app/: CMakeLists.txt
loader_app/include/: LoaderCLI.h
loader_app/src/: Loader.cpp  LoaderCLI.cpp
pintools/: CMakeLists.txt
pintools/pinutils/: CMakeLists.txt
pintools/pinutils/include/pinutils/: utils.h
pintools/profiler/: CMakeLists.txt
pintools/profiler/src/: main.cpp
pintools/unpacker/: CMakeLists.txt
pintools/unpacker/src/: main.cpp
